<resources>
    <string name="app_name">CartMate</string>
    <string name="add_good">Add good</string>
    <string name="mercadoria">Mercadoria</string>
    <string name="price_valor">R$ 000,00</string>
    <string name="quantity">qtde</string>
    <string name="currency">R$</string>
    <string name="empty_not_saved">Sem mercadoria para salvar!</string>
    <string name="nova_mercadoria">Nova Mercadoria</string>
    <string name="description">Descrição</string>
    <string name="insira_a_mercadoria">Insira a mercadoria</string>
    <string name="price">Preço</string>
    <string name="value">valor</string>
    <string name="quantidade">Quantidade:</string>
    <string name="qtde">qtde</string>
    <string name="adicionar">Adicionar</string>
    <string name="cancelar">Cancelar</string>
    <string name="valor_aleatorio">R$ 300</string>
    <string name="remover_mercadoria">Remover Mercadoria</string>
    <string name="msg_remover_mercadoria">Você relamente deseja remover o item?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="nome_da_lista">Nome da lista</string>
    <string name="data_e_hora">Data e Hora</string>
    <string name="remover_lista">Remover Lista</string>
    <string name="deseja_realmente_remover_lista">Deseja realmente remover a lista?</string>

</resources>