<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBox
        android:id="@+id/text_good_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mercadoria"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/brazilian_real_svgrepo_16"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:hint="@string/price_valor"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/edit_quantity"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/edit_quantity"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/text_good_total_price"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/text_good_total_price"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/price_valor"
        android:textSize="14sp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>