<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recicle_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/view_top"
        app:layout_constraintBottom_toTopOf="@id/fab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/view_top"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        style="@style/myTopBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/myTopBar"
        app:layout_constraintTop_toTopOf="@id/view_top"
        app:layout_constraintStart_toStartOf="@id/view_top"
        android:textSize="24sp"
        android:padding="16dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toEndOf="@id/text_title"
        app:layout_constraintTop_toTopOf="@id/view_top"
        app:layout_constraintBottom_toBottomOf="@id/view_top"
        android:layout_marginStart="-30dp"/>

    <TextView
        android:id="@+id/text_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_aleatorio"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/view_top"
        app:layout_constraintEnd_toEndOf="@id/view_top"
        android:padding="8dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_good"
        android:src="@drawable/baseline_add_24"
        android:tooltipText="Adicionar mercadoria"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>